<resources>
    <string name="app_name">MireaProject</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="data">Data</string>
    <string name="webview">WebView</string>
    <string name="profile">Profile</string>
    <string name="file_work">File Work</string>
    <string name="network">Network</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="auth_failed">Authentication failed</string>
</resources>