<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_data"
            android:icon="@drawable/account_circle"
            android:title="@string/data" />

        <item
            android:id="@+id/nav_webview"
            android:icon="@drawable/star"
            android:title="@string/webview" />

        <item
            android:id="@+id/nav_sensor"
            android:icon="@drawable/globe"
            android:title="Lesson5_Sensor" />
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="Lesson5_Camera" />
        <item
            android:id="@+id/nav_microphone"
            android:icon="@drawable/mic"
            android:title="Lesson5_Microphone" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/account_circle"
            android:title="Lesson6_Profile" />
        <item
            android:id="@+id/nav_file_work"
            android:icon="@drawable/star"
            android:title="Lesson6_File Work" />

    </group>
</menu>